--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +16,13 @@
         android:supportsRtl="true"
         android:theme="@style/App.Starting.Theme"
         tools:targetApi="31">
+        <activity
+            android:name=".HomeScreenActivity"
+            android:theme="@style/Theme.AppCompat"
+            android:exported="false" />
+<!--        <activity-->
+<!--            android:name=".ui.theme.HomeScreenActivity"-->
+<!--            android:exported="false" />-->
         <activity
             android:name=".NewsUI"
             android:exported="false" />
